新增相关接口
